# rfb-cnpj-etl

./: README.md  pyproject.toml
rfb_cnpj_etl/: L0_download.py  L1_extract.py  L2_load.py  L3_refine.py  Q1_by_cnae.py  Q2_by_cnpj.py
