[tool.poetry]
name = "rfb-cnpj-etl"
version = "0.1.0"
description = ""
authors = ["F.D.Castel <fdcastel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyarrow = "^15.0.1"
xlsxwriter = "^3.2.0"
tqdm = "^4.66.2"
httpx = "^0.27.0"
duckdb = "^0.10.0"
polars = "^0.20.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
